tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_base_classes_common_parent_named_non_exh.sk
base class A{b: Int}
base class LA extends A
base class RA extends A
base class LRA{sk: Bool} extends RA
base class RRA{ry: String} extends RA

base class LLA{lx: Bool} extends LA
base class RLA{ly: String} extends LA
class JLA{lt: Int} extends LLA, RLA
class OtherRRA{rt: Int} extends RRA

// If LRA, and RRA don't have a common concrete class, then it's not
// exhaustive.
fun myMatch(x: A): String {
  x match {
  | LA _ -> "a"
  }
}
